<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    android:id="@+id/layout">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="#cccccc">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/name"
            android:id="@+id/name"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/radioRealButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:elevation="2dp"
        android:background="@color/colorPrimaryDark"
        app:borderColor="@color/colorWhite"
        app:borderWidth="1dp"
        app:divider="@color/colorWhite"
        app:dividerPadding="10dp"
        app:dividerWidth="1dp"
        app:position="0"
        app:radius="30dp"
        app:ripple="true"
        app:rippleColor="@color/colorAccent"
        app:selectedBackground="@color/colorAccent">

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            app:drawable="@drawable/ic_male"
            app:drawableGravity="top"
            app:selectedTextColor="@color/colorWhite"
            app:text="@string/male"
            app:textColor="@color/colorWhite" />

        <com.addisonelliott.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            app:drawable="@drawable/ic_female"
            app:drawableGravity="top"
            app:selectedTextColor="@color/colorWhite"
            app:text="@string/female"
            app:textColor="@color/colorWhite" />
    </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:id="@+id/register"
        android:textColor="@android:color/white" />

</LinearLayout>